Fixed the z-index stuff and removed it

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -47,38 +47,41 @@ html,body {
 #main-container {
   width:100%;
   height: 100%;
-  background: rgba(12,16,33,1);
+  z-index:10;
 
   svg {
-    position:relative;
-    top:-50px;
+    
     width:100%;
-    height: 100%;
-    z-index:1;
+    height:100%;
+    z-index:2;
   }
 
   #toolbar {
+    position: absolute;
     padding:10px;
-    box-sizing:border-box;
     overflow:hidden;
+    width: auto;
   }
 
   #graph {
+
   }
 
   #sidebar-container {
-    
+    pointer-events:none;
     #add-container {
-      float:right;
       padding:10px;
+      position: relative;
+      float: right;
+      pointer-events:auto;
     }
     #sidebar {
-      z-index:100;
       width:300px;
       height:100%;
       background:@navy;
       padding:5px 10px;
       float:right;
+      pointer-events:auto;
     }
     #sidebar.toggled {
       width:0px;
